force-app/main/default/objects/Release__c/fields/Phase_PMT__c.field-meta.xml
<CustomField>
    <fullName>Phase_PMT__c</fullName>
    <defaultValue>&quot;Planning&quot;</defaultValue>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>