force-app/main/default/objects/Release__c/fields/Release_End_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Release_End_Date_PMT__c</fullName>
    <label>Release End Date</label>
    <type>Date</type>
</CustomField>