force-app/main/default/objects/Release__c/fields/Release_Manager_PMT__c.field-meta.xml
<CustomField>
    <fullName>Release_Manager_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Release(Manager)</relationshipLabel>
    <relationshipName>Release_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>