force-app/main/default/objects/Release__c/fields/Release_Owner_PMT__c.field-meta.xml
<CustomField>
    <fullName>Release_Owner_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Release (Owner)</relationshipLabel>
    <relationshipName>Release_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>