force-app/main/default/objects/Release__c/fields/Release_Start_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Release_Start_Date_PMT__c</fullName>
    <label>Release Start Date</label>
    <type>Date</type>
</CustomField>