force-app/main/default/objects/Release__c/fields/Sub_Phase__c.field-meta.xml
<CustomField>
    <fullName>Sub_Phase__c</fullName>
    <label>Sub-Phase</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Phase_PMT__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed Rejected</fullName>
            </value>
            <value>
                <fullName>System Testing</fullName>
            </value>
            <value>
                <fullName>User Acceptance Testing</fullName>
            </value>
            <value>
                <fullName>System Setup</fullName>
            </value>
            <value>
                <fullName>Deployment Planning</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Smoke Test</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Plan in progress</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Plan finalize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>