force-app/main/default/objects/Release__c/fields/Total_hours_PMT__c.field-meta.xml
<CustomField>
    <fullName>Total_hours_PMT__c</fullName>
    <label>Total hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>