force-app/main/default/objects/Release__c/validationRules/Release_Close_date_can_not_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_Close_date_can_not_be_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>Release_End_Date_PMT__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Close date should not be in future</errorMessage>
</ValidationRule>