force-app/main/default/objects/Release__c/validationRules/Release_Open_Date_not_in_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_Open_Date_not_in_past</fullName>
    <active>true</active>
    <errorConditionFormula>Release_Start_Date_PMT__c   &lt;  TODAY()</errorConditionFormula>
    <errorMessage>Start Date Should not be in past</errorMessage>
</ValidationRule>